# MADE2021_HPC

homework/: CMakeLists.txt
homework/01/: CMakeLists.txt  matmul.c
homework/01/notebooks/: homework1.ipynb  table.html
homework/02/: CMakeLists.txt  Dockerfile  Makefile  build.sh  main.cpp  mat.cpp  mat.h  matmul.cpp  matmul.h  readme.md  run.sh  test_2000_2048.patch  test_products.py
