project(HW1)
cmake_minimum_required(VERSION 3.19)

option(NO_TEST_IJK "build without ijk multiplication" ON)
option(NO_TEST_JIK "build without jik multiplication" ON)
option(NO_TEST_KIJ "build without kij multiplication" OFF)
option(NO_TEST_KIJ_OPT "build without kij optimized multiplication" OFF)
option(NO_TEST_KIJ_OPT "build without kij optimized multiplication v2" OFF)

message("NO_TEST_IJK: ${NO_TEST_IJK}")
message("NO_TEST_JIK: ${NO_TEST_JIK}")
message("NO_TEST_KIJ: ${NO_TEST_KIJ}")
message(NO_TEST_KIJ_OPT: ${NO_TEST_KIJ_OPT})
message("NO_TEST_KIJ_OPT2: ${NO_TEST_KIJ_OPT}")


set(SRC matmul.c)

add_executable(${PROJECT_NAME} ${SRC})

if (${NO_TEST_IJK})
    message("no compile ijk matmul")
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DNO_TEST_IJK)
endif ()
if (${NO_TEST_JIK})
    message("no compile jik matmul")
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DNO_TEST_JIK)
endif ()
if (${NO_TEST_KIJ})
    message("no compile kij matmul")
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DNO_TEST_KIJ)
endif ()
if (${NO_TEST_KIJ_OPT})
    message("no compile kij opt matmul")
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DNO_TEST_KIJ_OPT)
endif ()
if (${NO_TEST_KIJ_OPT2})
    message("no compile kij opt2 matmul")
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DNO_TEST_KIJ_OPT2)
endif ()